@@ -215,26 +215,27 @@ class Container extends ContainerBase
 
 		// Get the values overrides from fof.xml
 		$values = array_merge(array(
-			'factoryClass'      => '\\FOF30\\Factory\\BasicFactory',
-			'platformClass'     => '\\FOF30\\Platform\\Joomla\\Platform',
-			'scaffolding'       => false,
-			'saveScaffolding'   => false,
+			'factoryClass'              => '\\FOF30\\Factory\\BasicFactory',
+			'platformClass'             => '\\FOF30\\Platform\\Joomla\\Platform',
+			'scaffolding'               => false,
+			'saveScaffolding'           => false,
 			'saveControllerScaffolding' => false,
 			'saveModelScaffolding'      => false,
 			'saveViewScaffolding'       => false,
+			'section'					=> $section,
 		), $values);
 
 		$values = array_merge($values, array(
-			'componentName'     => $component,
-			'componentNamespace'=> $namespace,
-			'frontEndPath'      => $frontEndPath,
-			'backEndPath'       => $backEndPath,
-			'thisPath'          => $thisPath,
-			'rendererClass'     => $appConfig->get('container.rendererClass', null),
-			'factoryClass'      => $appConfig->get('container.factoryClass', $values['factoryClass']),
-			'platformClass'     => $appConfig->get('container.platformClass', $values['platformClass']),
-			'scaffolding'       => $appConfig->get('container.scaffolding', $values['scaffolding']),
-			'saveScaffolding'   => $appConfig->get('container.saveScaffolding', $values['saveScaffolding']),
+			'componentName'             => $component,
+			'componentNamespace'        => $namespace,
+			'frontEndPath'              => $frontEndPath,
+			'backEndPath'               => $backEndPath,
+			'thisPath'                  => $thisPath,
+			'rendererClass'             => $appConfig->get('container.rendererClass', null),
+			'factoryClass'              => $appConfig->get('container.factoryClass', $values['factoryClass']),
+			'platformClass'             => $appConfig->get('container.platformClass', $values['platformClass']),
+			'scaffolding'               => $appConfig->get('container.scaffolding', $values['scaffolding']),
+			'saveScaffolding'           => $appConfig->get('container.saveScaffolding', $values['saveScaffolding']),
 			'saveControllerScaffolding' => $appConfig->get('container.saveControllerScaffolding', $values['saveControllerScaffolding']),
 			'saveModelScaffolding'      => $appConfig->get('container.saveModelScaffolding', $values['saveModelScaffolding']),
 			'saveViewScaffolding'       => $appConfig->get('container.saveViewScaffolding', $values['saveViewScaffolding']),
@@ -447,6 +448,11 @@ class Container extends ContainerBase
                 if (isset($c['saveViewScaffolding']))
                 {
                     $factory->setSaveViewScaffolding($c['saveViewScaffolding']);
+                }
+
+                if (isset($c['section']))
+                {
+                    $factory->setSection($c['section']);
                 }
 
 				return $factory;
